tests for broken

--- a/test/Makefile
+++ b/test/Makefile
@@ -15,5 +15,6 @@ clean:
 test: all
 	@echo "Comparing with expected result"
 	@diff -u ExpectedMarkdown.md Test.md && echo "OK"
+	@diff -u Expectedbroken.md broken.md && echo "OK"
 	
 	
