--- a/test/Makefile
+++ b/test/Makefile
@@ -14,7 +14,7 @@ clean:
 
 test: all
 	@echo "Comparing with expected result"
-	@diff -u ExpectedTest.md Test.md && echo "OK"
-	@diff -u ExpectedBroken.md Broken.md && echo "OK"
+	@echo "Test.md" && diff -u ExpectedTest.md Test.md && echo "OK"
+	@echo "Broken.md" && diff -u ExpectedBroken.md Broken.md && echo "OK"
 	
 	
